--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -59,6 +59,7 @@ spring:
 
 liquibase:
     contexts: dev
+    drop-first: true
 
 # ===================================================================
 # To enable SSL, generate a certificate using:
